src/test/resources/semantic/custom/reject/multiplyInvalidTypesPrimitive2.ul
void main() {
}

void foo() {
    boolean result;
    result = (true * 't');
}
